minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: cert-manager
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: minio.green-ecolution.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-console
                port:
                  number: 9090
  tls:
    - hosts:
        - minio.green-ecolution.de
      secretName: minio-console-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: cert-manager
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: s3.green-ecolution.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-hl
                port:
                  number: 9000
  tls:
    - hosts:
        - s3.green-ecolution.de
      secretName: minio-api-tls
